--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "@marasco/core-passport-api",
   "version": "1.0.2",
   "description": "Authorization and authentication api",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "concurrently \"npm run tsc:w\" \"nodemon server.js\"",
+    "startdev": "concurrently \"SET NODE_ENV=dev\" \"nodemon server.js\"",
     "test": "mocha --reporter spec",
     "testcat": "mocha --reporter nyan",
     "cover": "node node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
+  },
+  "directories": {
+    "test": "test"
   },
   "engines": {
     "node": ">=4.2.4"
@@ -28,8 +33,36 @@
   "homepage": "https://github.com/razorphish/core-passport-api#readme",
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
+    "concurrently": "^4.0.1",
     "coveralls": "^3.0.2",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0"
+  },
+  "dependencies": {
+    "app-root-path": "^2.0.1",
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "core-js": "2.4.1",
+    "cors": "^2.8.3",
+    "csurf": "^1.9.0",
+    "errorhandler": "^1.5.0",
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.6",
+    "handlebars-helpers": "^0.7.5",
+    "handlebars-layouts": "^3.1.4",
+    "lodash": "^4.17.10",
+    "mongoose": "^5.3.12",
+    "morgan": "^1.9.1",
+    "oauth2orize": "^1.8.0",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
+    "passport-oauth2-client-password": "^0.1.2",
+    "serve-favicon": "^2.5.0",
+    "winston": "^2.4.2"
   }
 }
