--- a/config/config.development.json
+++ b/config/config.development.json
@@ -3,6 +3,7 @@
       "host": "127.0.0.1",
       "database": "biddler",
       "port": "27017",
+      "authSource": "admin",
       "username": "razorphish",
       "password": "RaC0nt@Ur1+2"
     },
