--- a/config/config.local.json
+++ b/config/config.local.json
@@ -3,7 +3,7 @@
       "host": "127.0.0.1",
       "port": "27017",
       "database": "biddler",
-      "authSource": "?authSource=admin",
+      "queryOptions": "?authSource=admin",
       "username": "razorphish",
       "password": "RaC0nt@Ur1+2"
     },
