tring to shut down server after tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,8 @@ before_script:
   - sleep 15
   - mongo mydb_test --eval 'db.createUser({user:"razorphish",pwd:"abcd1234",roles:["readWrite"]});'
 
+after_success:
+  - npm test succeeded
+
 # Send coverage data to Coveralls
 after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
