--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,7 @@ services:
 
 before_script:
   - sleep 15
-  - mongo mydb_test --eval 'db.createUser({user:"razorphish",pwd:"abcd1234",roles:["readWrite"]});'
-
-after_success:
-  - npm test succeeded
+  - mongo mydb_test --eval 'db.createUser({user:"mydb_user",pwd:"abcd1234",roles:["readWrite"]});'
 
 # Send coverage data to Coveralls
 after_script: "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
