--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "concurrently \"npm run tsc:w\" \"nodemon server.js\"",
     "startdev": "concurrently \"SET NODE_ENV=dev\" \"nodemon server.js\"",
-    "test": "mocha --exit --reporter spec",
+    "test": "mocha test/**/*.spec.js --exit --recursive --reporter spec",
     "testcat": "mocha --reporter nyan",
     "cover": "node node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- --exit -R spec test/**/*spec.js"
   },
