--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
+    "chai-spies": "^1.0.0",
     "concurrently": "^4.0.1",
     "coveralls": "^3.0.2",
     "istanbul": "^0.4.5",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "sinon": "^7.2.0",
+    "sinon-mongoose": "^2.2.1"
   },
   "dependencies": {
     "app-root-path": "^2.0.1",
