--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "handlebars-layouts": "^3.1.4",
     "lodash": "^4.17.10",
     "mongoose": "^5.3.13",
+    "mongoose-type-email": "^1.0.10",
     "morgan": "^1.9.1",
     "oauth2orize": "^1.8.0",
     "passport": "^0.3.2",
