added JWT authentication and authorization

--- a/package.json
+++ b/package.json
@@ -56,16 +56,20 @@
     "handlebars": "^4.0.6",
     "handlebars-helpers": "^0.7.5",
     "handlebars-layouts": "^3.1.4",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.3.13",
     "mongoose-type-email": "^1.0.10",
     "morgan": "^1.9.1",
     "oauth2orize": "^1.8.0",
+    "oauth2orize-jwt-bearer": "^0.2.0",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-oauth2-client-password": "^0.1.2",
+    "passport-oauth2-jwt-bearer": "^0.2.0",
     "serve-favicon": "^2.5.0",
     "winston": "^2.4.2"
   }
