--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "oauth2orize": "^1.8.0",
     "oauth2orize-jwt-bearer": "^0.2.0",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
