--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "app-root-path": "^2.0.1",
+    "async": "^2.6.1",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
@@ -52,12 +53,15 @@
     "csurf": "^1.9.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
+    "express-flash": "0.0.2",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.6",
     "handlebars-helpers": "^0.7.5",
     "handlebars-layouts": "^3.1.4",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.10",
+    "mailchimp-api-3": "0.0.9",
+    "mandrill-api": "^1.0.45",
     "mongoose": "^5.3.13",
     "mongoose-type-email": "^1.0.10",
     "morgan": "^1.9.1",
