--- a/config/config.local.json
+++ b/config/config.local.json
@@ -11,7 +11,10 @@
     "apiKey": "449fb782f3b40ae6c93c5d46f5da475b-us3"
   },
   "mandrill": {
-    "apiKey": "4HXB52ELNM7qeEK5V1MpzA"
+    "apiKey": "4HXB52ELNM7qeEK5V1MpzA",
+    "from_email": "david@maras.co",
+    "from_name": "Maras, co Support",
+    "reply_to": "david@maras.co"
   },
   "winstonConfig": {
     "file": {
