--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.10",
     "mailchimp-api-3": "0.0.9",
+    "mailchimp-api-v3": "^1.12.1",
     "mandrill-api": "^1.0.45",
     "mongoose": "^5.3.13",
     "mongoose-type-email": "^1.0.10",
