--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "passport-oauth2-client-password": "^0.1.2",
     "passport-oauth2-jwt-bearer": "^0.2.0",
     "serve-favicon": "^2.5.0",
+    "web-push": "^3.3.3",
     "winston": "^2.4.2"
   }
 }
