--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,12 @@
             "request": "launch",
             "name": "Launch Program",
             "program": "${workspaceFolder}\\server.js"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Program:iOs",
+            "program": "${workspaceFolder}/server.js"
         }
     ]
 }
