--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sinon-mongoose": "^2.2.1"
   },
   "dependencies": {
+    "apn": "^2.2.0",
     "app-root-path": "^2.0.1",
     "async": "^2.6.1",
     "bcrypt": "^3.0.2",
