--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "passport-oauth2-client-password": "^0.1.2",
     "passport-oauth2-jwt-bearer": "^0.2.0",
     "serve-favicon": "^2.5.0",
+    "twitter-node-client": "github:razorphish/TwitterJSClient",
     "web-push": "^3.3.3",
     "winston": "^2.4.2"
   }
