--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,5 +5,6 @@ updates:
     schedule:
       interval: "daily"
     target-branch: "master"
+    open-pull-requests-limit: 10
     reviewers:
       - "razorphish"
