--- a/package.json
+++ b/package.json
@@ -1,86 +1,95 @@
 {
-  "name": "@marasco/core-api",
-  "version": "2.0.3",
-  "description": "Authorization and authentication api",
-  "main": "server.js",
-  "scripts": {
-    "start": "concurrently \"npm run tsc:w\" \"nodemon server.js\"",
-    "start:ios": "node server.js",
-    "startdev": "concurrently \"SET NODE_ENV=dev\" \"nodemon server.js\"",
-    "test": "mocha test/**/*.spec.js --exit --recursive --reporter spec",
-    "testcat": "mocha --reporter nyan",
-    "cover": "node node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- --exit -R spec test/**/*spec.js"
-  },
-  "directories": {
-    "test": "test"
-  },
-  "engines": {
-    "node": ">=4.2.4"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/razorphish/core-api.git"
-  },
-  "keywords": [
-    "authorization",
-    "authentication",
-    "passport"
-  ],
-  "author": "Antonio Marasco <david@maras.co> (http://www.maras.co)",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/razorphish/core-api/issues"
-  },
-  "homepage": "https://github.com/razorphish/core-api#readme",
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-http": "^4.2.0",
-    "chai-spies": "^1.0.0",
-    "concurrently": "^4.0.1",
-    "coveralls": "^3.0.2",
-    "istanbul": "^0.4.5",
-    "mocha": "^5.2.0",
-    "sinon": "^7.2.0",
-    "sinon-mongoose": "^2.2.1"
-  },
-  "dependencies": {
-    "apn": "^2.2.0",
-    "app-root-path": "^2.0.1",
-    "async": "^2.6.1",
-    "bcrypt": "^3.0.6",
-    "body-parser": "^1.15.2",
-    "cookie-parser": "^1.4.3",
-    "core-js": "2.4.1",
-    "cors": "^2.8.3",
-    "csurf": "^1.9.0",
-    "errorhandler": "^1.5.0",
-    "express": "^4.16.4",
-    "express-handlebars": "^3.0.0",
-    "handlebars": "^4.7.7",
-    "handlebars-helpers": "^0.7.5",
-    "handlebars-layouts": "^3.1.4",
-    "jsonwebtoken": "^8.4.0",
-    "lodash": "^4.17.21",
-    "mailchimp-api-3": "0.0.9",
-    "mailchimp-api-v3": "^1.12.1",
-    "mandrill-api": "^1.0.45",
-    "mongoose": "^5.3.13",
-    "mongoose-type-email": "^1.0.10",
-    "morgan": "^1.9.1",
-    "oauth2orize": "^1.8.0",
-    "oauth2orize-jwt-bearer": "^0.2.0",
-    "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1",
-    "passport-http": "^0.3.0",
-    "passport-http-bearer": "^1.0.1",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "passport-oauth2-client-password": "^0.1.2",
-    "passport-oauth2-jwt-bearer": "^0.2.0",
-    "serve-favicon": "^2.5.0",
-    "twitter-node-client": "github:razorphish/TwitterJSClient",
-    "web-push": "^3.3.3",
-    "wepay": "0.0.9",
-    "winston": "^2.4.2"
-  }
+	"name": "@marasco/core-api",
+	"version": "2.0.3",
+	"description": "Authorization and authentication api",
+	"main": "server.js",
+	"scripts": {
+		"start": "concurrently \"npm run tsc:w\" \"nodemon server.js\"",
+		"start:ios": "node server.js",
+		"startdev": "concurrently \"SET NODE_ENV=dev\" \"nodemon server.js\"",
+		"test": "mocha test/**/*.spec.js --exit --recursive --reporter spec",
+		"testcat": "mocha --reporter nyan",
+		"cover": "node node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- --exit -R spec test/**/*spec.js",
+		"release": "standard-version",
+		"release:first": "npm run release -- --first-release",
+		"release:patch": "npm run release -- --release-as patch",
+		"release:minor": "npm run release -- --release-as minor",
+		"prepare": "husky install",
+		"clean": "npx rimraf ./**/node_modules",
+		"reinstall": "npm run clean && npm install"
+	},
+	"directories": {
+		"test": "test"
+	},
+	"engines": {
+		"node": ">=4.2.4"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/razorphish/core-api.git"
+	},
+	"keywords": [
+		"authorization",
+		"authentication",
+		"passport"
+	],
+	"author": "Antonio Marasco <david@maras.co> (http://www.maras.co)",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/razorphish/core-api/issues"
+	},
+	"homepage": "https://github.com/razorphish/core-api#readme",
+	"devDependencies": {
+		"chai": "^4.2.0",
+		"chai-http": "^4.2.0",
+		"chai-spies": "^1.0.0",
+		"concurrently": "^4.0.1",
+		"coveralls": "^3.0.2",
+		"cz-conventional-changelog": "^3.3.0",
+		"istanbul": "^0.4.5",
+		"mocha": "^5.2.0",
+		"sinon": "^7.2.0",
+		"sinon-mongoose": "^2.2.1",
+		"standard-version": "^9.3.1"
+	},
+	"dependencies": {
+		"apn": "^2.2.0",
+		"app-root-path": "^2.0.1",
+		"async": "^2.6.1",
+		"bcrypt": "^3.0.6",
+		"body-parser": "^1.15.2",
+		"cookie-parser": "^1.4.3",
+		"core-js": "2.4.1",
+		"cors": "^2.8.3",
+		"csurf": "^1.9.0",
+		"errorhandler": "^1.5.0",
+		"express": "^4.16.4",
+		"express-handlebars": "^3.0.0",
+		"handlebars": "^4.7.7",
+		"handlebars-helpers": "^0.7.5",
+		"handlebars-layouts": "^3.1.4",
+		"jsonwebtoken": "^8.4.0",
+		"lodash": "^4.17.21",
+		"mailchimp-api-3": "0.0.9",
+		"mailchimp-api-v3": "^1.12.1",
+		"mandrill-api": "^1.0.45",
+		"mongoose": "^5.3.13",
+		"mongoose-type-email": "^1.0.10",
+		"morgan": "^1.9.1",
+		"oauth2orize": "^1.8.0",
+		"oauth2orize-jwt-bearer": "^0.2.0",
+		"passport": "^0.3.2",
+		"passport-facebook": "^2.1.1",
+		"passport-http": "^0.3.0",
+		"passport-http-bearer": "^1.0.1",
+		"passport-jwt": "^4.0.0",
+		"passport-local": "^1.0.0",
+		"passport-oauth2-client-password": "^0.1.2",
+		"passport-oauth2-jwt-bearer": "^0.2.0",
+		"serve-favicon": "^2.5.0",
+		"twitter-node-client": "github:razorphish/TwitterJSClient",
+		"web-push": "^3.3.3",
+		"wepay": "0.0.9",
+		"winston": "^2.4.2"
+	}
 }
