--- a/package.json
+++ b/package.json
@@ -40,16 +40,25 @@
 	},
 	"homepage": "https://github.com/razorphish/core-api#readme",
 	"devDependencies": {
+		"@commitlint/cli": "^13.1.0",
+		"@commitlint/config-conventional": "^13.1.0",
 		"chai": "^4.2.0",
 		"chai-http": "^4.2.0",
 		"chai-spies": "^1.0.0",
 		"concurrently": "^4.0.1",
 		"coveralls": "^3.0.2",
 		"cz-conventional-changelog": "^3.3.0",
+		"eslint": "^7.32.0",
+		"eslint-config-airbnb-base": "^14.2.1",
+		"eslint-plugin-import": "^2.24.2",
+		"husky": "^7.0.2",
 		"istanbul": "^0.4.5",
 		"mocha": "^5.2.0",
+		"prettier": "^2.4.1",
+		"pretty-quick": "^3.1.1",
 		"sinon": "^7.2.0",
 		"sinon-mongoose": "^2.2.1",
+		"sinon-test": "^3.1.1",
 		"standard-version": "^9.3.1"
 	},
 	"dependencies": {
