--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "istanbul": "^0.4.5",
     "mocha": "^9.1.1",
     "nodemon": "^2.0.12",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
     "sinon": "^11.1.2",
@@ -89,7 +90,7 @@
     "mailchimp-api-3": "0.0.9",
     "mailchimp-api-v3": "^1.15.0",
     "mandrill-api": "^1.0.45",
-    "mongoose": "^5.7.5",
+    "mongoose": "^6.0.7",
     "mongoose-type-email": "^1.1.2",
     "morgan": "^1.10.0",
     "oauth2orize": "^1.8.0",
