feat(initialize): attempting to fix github changes
Attempting to fix github changes to work on a2 hosting

--- a/config/config.production.json
+++ b/config/config.production.json
@@ -14,7 +14,7 @@
   "serverlessDatabaseConfig": {
     "database": "marasco",
     "username": "razorphish",
-    "password": "RaC0nt@Ur1+2",
+    "password": "vZakQbGvahQIBCOZ",
     "connectionString": "mongodb+srv://<username>:<password>@marasco-prod.e2aex.mongodb.net/<database>?retryWrites=true&w=majority"
   },
   "mailchimp": {
