--- a/package.json
+++ b/package.json
@@ -108,5 +108,10 @@
     "web-push": "^3.4.5",
     "wepay": "0.0.9",
     "winston": "^3.3.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
